--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,8 @@
-<footer>
-  <p>© Company 2014</p>
+<footer class="blog-footer">
+  <p>Blog template built for <a href="http://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+  <p>
+    <a href="#">Back to top</a>
+  </p>
 </footer>
 
 <!--<footer class="site-footer">-->
