--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -7,6 +7,7 @@
 <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <!-- endbower -->
 
-<!-- include: "type": "js", "files": "js/*.js", "baseUrl": "" -->
-<script src="js/app.js"></script>
+<!-- include: "type": "js", "files": "js/*.js", "baseUrl": "/" -->
+<script src="/js/app.js"></script>
+<script src="/js/toc.js"></script>
 <!-- /include -->
