--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,27 +1,25 @@
 ---
 layout: default
 ---
-
-<div class="col-sm-4 col-sm-push-8 blog-sidebar">
-    <div class="sidebar-module sidebar-module-inset">
-        <h4>About</h4>
-        {{ page.description }}
+<div class="blog-post">
+    <div class="col-sm-4 col-sm-push-8 blog-sidebar">
+        <div class="sidebar-module sidebar-module-inset">
+            <h4>About</h4>
+            {{ page.description }}
+        </div>
+        <div class="sidebar-module">
+            <h4>TOC</h4>
+            <ul id="toc"></ul>
+        </div>
     </div>
-    <div class="sidebar-module">
-        <h4>TOC</h4>
-        <ul id="toc"></ul>
+
+    <div class="col-sm-8 col-sm-pull-4 blog-main">
+        <div class="blog-post-content">
+            <h1 class="blog-post-title">{{ page.title }}</h1>
+
+            <p class="blog-post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+
+            {{ content }}
+        </div>
     </div>
 </div>
-
-<div class="col-sm-8 col-sm-pull-4 blog-main">
-    <div class="blog-post">
-        <h1 class="blog-post-title">{{ page.title }}</h1>
-
-        <p class="blog-post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-
-        {{ content }}
-    </div>
-</div>
-
-
-<script src="/js/toc.js"></script>
