bientot la quille

--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -5,7 +5,6 @@
   .blog-header {
     padding-bottom: 1.25rem;
     margin-bottom: 2rem;
-    border-bottom: .05rem solid #eee;
 
     .blog-title {
       margin-bottom: 0;
@@ -21,7 +20,7 @@
     margin-bottom: 1rem;
 
     .preview-thumbnail {
-      border: 1px solid $alt-color;
+      border: 1px solid $brand-info;
       padding: 5px;
       overflow-y: hidden;
       border-top-left-radius: 2px;
@@ -30,7 +29,7 @@
 
     .preview-caption {
       padding: 10px 10px 5px 10px;
-      border-left: 1px solid $alt-color;
+      border-left: 1px solid $brand-info;
     }
 
   }
