--- a/_sass/_toc.scss
+++ b/_sass/_toc.scss
@@ -6,7 +6,7 @@
   -webkit-transition: opacity 0.2s ease-in-out 0.1s;
   -moz-transition: opacity 0.2s ease-in-out 0.1s;
   -ms-transition: opacity 0.2s ease-in-out 0.1s;
-  color: $brand-color;
+  color: $brand-primary;
 }
 
 .toc-link-h2 {
