--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -4,7 +4,7 @@
 
 .blog-masthead {
   margin-bottom: 3rem;
-  background-color: $brand-color;
+  background-color: $brand-primary;
   -webkit-box-shadow: inset 0 -.1rem .25rem rgba(0,0,0,.1);
   box-shadow: inset 0 -.1rem .25rem rgba(0,0,0,.1);
 }
@@ -14,7 +14,7 @@
   position: relative;
   padding: 1rem;
   font-weight: 500;
-  color: #cdddeb;
+  color: lighten($brand-primary, 45%);
 }
 .nav-link:hover,
 .nav-link:focus {
