--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -4,12 +4,12 @@
 .blog-post {
 
   .sidebar-module {
-    padding: 1rem;
+    padding: $spacer;
   }
   .sidebar-module-inset {
-    padding: 1rem;
-    background-color: #f5f5f5;
-    border-radius: .25rem;
+    padding: $spacer;
+    background-color: $gray-light;
+    border-radius: $border-radius;
   }
   .sidebar-module-inset p:last-child,
   .sidebar-module-inset ul:last-child,
@@ -26,7 +26,7 @@
     }
     .blog-post-meta {
       margin-bottom: 1.25rem;
-      color: #999;
+      color: $text-muted;
     }
   }
 }
