--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -8,7 +8,7 @@
   }
   .sidebar-module-inset {
     padding: $spacer;
-    background-color: $gray-light;
+    background-color: $gray-lighter;
     border-radius: $border-radius;
   }
   .sidebar-module-inset p:last-child,
