--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -2,12 +2,16 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 
+<!-- build:js /js/vendor.js -->
 <!-- bower:js -->
 <script src="/bower_components/jquery/dist/jquery.js"></script>
 <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <!-- endbower -->
+<!-- endbuild -->
 
+<!-- build:js /js/app.js -->
 <!-- include: "type": "js", "files": "js/*.js", "baseUrl": "/" -->
 <script src="/js/app.js"></script>
 <script src="/js/toc.js"></script>
 <!-- /include -->
+<!-- endbuild -->
