--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,12 +6,15 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
+  <!-- build:css /css/main.css -->
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+  <!-- endbuild -->
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
+  <!-- build:css /css/vendor.css -->
   <!-- bower:css -->
   <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.css" />
   <!-- endbower -->
-
+  <!-- endbuild -->
 </head>
